ClassLoading from jar is working